[metadata]
name = GMMClusteringAlgorithms
version = 0.0.2
url = https://pypi.org/project/GMMClusteringAlgorithms
author = Colin Weber
author_email = colin.weber.27@gmail.com
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
description = A data analysis package for PI-ICR Mass Spectroscopy
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >=3.6
packages = wheel, scikit-learn, abc, pandas, numpy, matplotlib, scipy, lmfit, multiprocessing, functools, joblib, tqdm, os