[metadata]
name = GMMClusteringAlgorithms
version = 0.1.26
url = https://pypi.org/project/GMMClusteringAlgorithms
author = Colin Weber
author_email = colin.weber.27@gmail.com
project_urls={
        Homepage: https://pypi.org/project/GMMClusteringAlgorithms/
        Source code: https://github.com/colinweber27/GMMClusteringAlgorithms
        Download: https://pypi.org/project/GMMClusteringAlgorithms/#files
    },
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Intended Audience :: Science/Research
    Natural Language :: English
    Operating System :: Microsoft :: Windows
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Scientific/Engineering :: Physics
description = A data analysis package for PI-ICR Mass Spectroscopy
long_description = file: README.md
long_description_content_type = text/markdown
keywords = Gaussian Mixture Model, Clustering Algorithms, Machine Learning, Mass Spectroscopy

[options]
python_requires = >=3.6
packages = scikit-learn, pandas, matplotlib, lmfit, joblib, tqdm, pillow, webcolors
install_requires = scikit-learn; pandas; matplotlib; lmfit; joblib; tqdm